--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_PORT=8080
 TIMEZONE=Asia/Jakarta
 
-DB_DRIVER=mysql
+DB_DRIVER=postgres
 
 #SQLite
 SQLITE_PATH=databases/database
@@ -9,8 +9,8 @@ SQLITE_PATH=databases/database
 # PostgreSQL
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=pass
-POSTGRES_NAME=db
-POSTGRES_PORT=5432
+POSTGRES_DB=db
+POSTGRES_PORT=9920
 POSTGRES_HOST=localhost
 
 # MySQL
